cambios puse rap de lolo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola este es mi sitio web sigueme en manito tu papa
+        yepa ya toy por aqui no podia deja mi strim ya estoy por ksa ia llegao el papa 
     </p>
 
     
